# Telegram-Timed-Messages

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: docker-image.yml
app/: __init__.py  __main__.py  config_parser.py  logger.py  telegram.py
