[tool.poetry]
name = "ursst-spam"
version = "1.0.0"
description = ""
authors = ["Kirill <teckytgut@gmail.com>"]
packages = [{include = "app"}]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ani4a/Telegram-Timed-Messages.git"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
telethon = "^1.28.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
